--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
   "description": "A library for WordPress breadcrumbs.",
   "license": "GPL-2.0+",
   "require": {
-    "php": ">=5.3",
+    "php": ">=5.3"
+  },
+  "require-dev": {
     "phpunit/phpunit": "^5.7"
   },
   "authors": [
