--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: php
 php:
+- 5.3
 - 5.6
 - 7
 sudo: false
@@ -15,4 +16,4 @@ before_script:
 - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 - composer install
 script:
-- vendor/bin/phpunit
+- composer test
