--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "inc2734/wp-breadcrumbs",
   "description": "A library for WordPress breadcrumbs.",
   "license": "GPL-2.0+",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "require": {
     "php": ">=5.3"
   },
@@ -19,5 +19,8 @@
     "psr-4" : {
       "Inc2734\\WP_Breadcrumbs\\" : "src"
     }
+  },
+  "scripts": {
+    "test": "bash bin/phpunit.sh"
   }
 }
