--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "inc2734/wp-breadcrumbs",
   "description": "A library for WordPress breadcrumbs.",
-  "license": "GPL-2.0+",
-  "version": "1.0.1",
+  "license": "GPL-2.0-or-later",
+  "version": "1.0.2",
   "require": {
     "php": ">=5.6"
   },
