--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "inc2734/wp-breadcrumbs",
   "description": "A library for WordPress breadcrumbs.",
   "license": "GPL-2.0-or-later",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "require": {
     "php": ">=5.6"
   },
@@ -10,7 +10,13 @@
     "squizlabs/php_codesniffer": "*",
     "wp-coding-standards/wpcs": "*",
     "phpmd/phpmd": "2.*",
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^5.7",
+    "doctrine/instantiator": "1.0.4",
+    "phpunit/php-token-stream": "1.4.11",
+    "phpdocumentor/reflection-docblock": "3.2.2",
+    "symfony/yaml": "3.4.1",
+    "pdepend/pdepend": "2.5.0",
+    "myclabs/deep-copy": "1.7.0"
   },
   "authors": [
     {
