--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,8 @@
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
-.travis.yml export-ignore
 .phpcs.xml.dist export-ignore
-.phpmd.ruleset.xml export-ignore
 .phpunit.xml.dist export-ignore
-bin export-ignore
+.travis.yml export-ignore
+.wp-env.json export-ignore
 tests export-ignore
