--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-dist: trusty
+dist: xenial
 language: php
+services:
+  - docker
 php:
 - 7.2
 - 7.3
@@ -11,8 +13,9 @@ env:
   - GIT_AUTHOR_NAME=travis-ci
   - GIT_AUTHOR_EMAIL=inc@2inc.org
   - WP_VERSION=latest WP_MULTISITE=0
-before_script:
-- bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+install:
+- nvm install 12
+- npm install
 - composer install
 script:
-- composer test
+- npm run test
