--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,6 @@
 .gitignore export-ignore
 .phpcs.xml.dist export-ignore
 .phpunit.xml.dist export-ignore
-.travis.yml export-ignore
+.github export-ignore
 .wp-env.json export-ignore
 tests export-ignore
