fix PHPUnit Polyfills requirement error

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"phpcompatibility/php-compatibility": "^9.3",
 		"wp-coding-standards/wpcs": "^2.2",
 		"sirbrillig/phpcs-variable-analysis": "^2.8",
-    "wp-phpunit/wp-phpunit": "^5.5"
+    "wp-phpunit/wp-phpunit": "^5.5",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "authors": [
     {
