--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,10 @@
   "description": "A library for WordPress breadcrumbs.",
   "license": "GPL-2.0-or-later",
   "require": {
-    "php": ">=5.6"
+    "php": ">=7.4"
   },
   "require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-		"squizlabs/php_codesniffer": "^3.5",
-		"phpcompatibility/php-compatibility": "^9.3",
-		"wp-coding-standards/wpcs": "^2.2",
-		"sirbrillig/phpcs-variable-analysis": "^2.8",
-    "wp-phpunit/wp-phpunit": "^5.5",
+    "wp-coding-standards/wpcs": "^2.3",
     "yoast/phpunit-polyfills": "^1.0"
   },
   "authors": [
@@ -23,6 +18,13 @@
   "autoload": {
     "psr-4" : {
       "Inc2734\\WP_Breadcrumbs\\" : "src"
+    }
+  },
+  "config": {
+    "process-timeout": 0,
+    "vendor-dir": "vendor",
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "scripts": {
