--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "inc2734",
   "license": "GPL-2.0+",
   "devDependencies": {
-    "@wordpress/env": "^4.1.0",
+    "@wordpress/env": "^8.7.0",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
@@ -11,10 +11,9 @@
     "stop": "wp-env stop",
     "cli": "wp-env run cli",
     "wp": "wp-env run cli wp",
-    "pretest": "wp-env start && wp-env run composer 'install --no-interaction'",
-    "test:lint:php": "wp-env run composer run-script lint",
+    "test:lint:php": "npm run composer lint",
     "test:lint": "run-s test:lint:*",
-    "test:unit:php": "wp-env run phpunit 'phpunit -c /var/www/html/wp-content/plugins/wp-breadcrumbs/.phpunit.xml.dist --verbose'",
+    "test:unit:php": "wp-env start && wp-env run --env-cwd=\"wp-content/plugins/wp-breadcrumbs\" tests-wordpress vendor/bin/phpunit -c .phpunit.xml.dist --verbose",
     "test:unit": "run-s test:unit:*",
     "test": "run-s test:*"
   }
