--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     }
   },
   "scripts": {
-    "format": "phpcbf --standard=./.phpcs.xml.dist --report-summary --report-source",
-    "lint": "phpcs --standard=./.phpcs.xml.dist"
+    "lint": "phpcs --standard=.phpcs.xml.dist",
+    "format": "phpcbf --standard=.phpcs.xml.dist --report-summary --report-source"
   }
 }
