--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cli": "wp-env run cli",
     "wp": "wp-env run cli wp",
     "composer": "wp-env run --env-cwd=\"wp-content/plugins/wp-breadcrumbs\" cli composer",
-    "test:lint:php": "npm run composer lint",
+    "pretest": "wp-env start && npm run composer install -- --no-interaction",
+    "test:lint:php": "wp-env start && npm run composer lint",
     "test:lint": "run-s test:lint:*",
     "test:unit:php": "wp-env start && wp-env run --env-cwd=\"wp-content/plugins/wp-breadcrumbs\" tests-wordpress vendor/bin/phpunit -c .phpunit.xml.dist --verbose",
     "test:unit": "run-s test:unit:*",
